--- a/i18n/additional.json
+++ b/i18n/additional.json
@@ -7,7 +7,11 @@
             "confirmButton": "Continuar"
         },
         "thankYouPage": {
-
+            "message": "Tu reservación ha sido confirmada",
+            "thankyou": "¡Esperamos verte pronto!"
+        },
+        "button": {
+            "text": "Regresar"
         }
         
 
@@ -16,9 +20,15 @@
         "resumeBookReservation": {
             "reservationMessage": "Booked reservation resume",
             "instructions": "Please click confirm to finish your reservation",
-            "closeButton": "Cerrar",
+            "closeButton": "Close",
             "confirmButton": "Confirm"
+        },
+        "thankYouPage": {
+            "message": "Your reservation has been booked!",
+            "thankyou": "Hope to see you soon!"
+        },
+        "button": {
+            "text": "Back"
         }
-        
     }
 }
